--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.postprocessing": "2.1.7",
     "com.unity.probuilder": "4.0.5",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.render-pipelines.lightweight": "6.9.1",
